# lib/api-spec/openapi.yaml
@@ -848,6 +848,11 @@ components:
       properties:
         name:
           type: string
+        slug:
+          type: string
+          pattern: "^[a-z0-9]+(?:-[a-z0-9]+)*$"
+          minLength: 3
+          maxLength: 50
         whatsapp:
           type: string
         logoUrl:
